falco/namespace.yaml
# Namespace definition
---
apiVersion: v1
kind: Namespace
metadata:
  name: falco
