falco/ingress.yaml
# Ingress resource for Falcosidekick UI
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: falcosidekick-ui
  namespace: falco
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "selfsigned-issuer"
spec:
  tls:
    - hosts:
        - falco.maniak.lab
      secretName: falco-tls
  rules:
    - host: "falco.maniak.lab"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: falco-falcosidekick-ui
                port:
                  number: 2802
